--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -507,5 +507,6 @@
 	"postalOpen": "Allow Postal Registration",
 	"postalRegistrationDisabled": "The postal registration is still disabled. You have will recieve information about it shortly.",
 	"paymentDisabled": "The payment process is still disabled. You have will recieve information about it shortly.",
-	"paymentAndPostalRegistrationDisabled": "Both the payment process and the postal registration are still disabled. You will recieve information about it shortly."
+	"paymentAndPostalRegistrationDisabled": "Both the payment process and the postal registration are still disabled. You will recieve information about it shortly.",
+	"country": "Country"
 }
