--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -398,7 +398,7 @@
 	"conferenceStartRegistration": "Start of registration",
 	"conferenceStartAssignment": "Start of assignment",
 	"conferenceStatus": "Conference Status",
-	"conferenceStatusPre": "Before the conference",
+	"conferenceStatusPre": "Before registration starts",
 	"conferenceStatusActive": "Active Conference",
 	"conferenceStatusPost": "After the conference",
 	"conferenceDataSavingPrompt": "Are you sure you want to save the changes? All fields marked green will be live changed.",
@@ -508,5 +508,10 @@
 	"postalRegistrationDisabled": "The postal registration is still disabled. You have will recieve information about it shortly.",
 	"paymentDisabled": "The payment process is still disabled. You have will recieve information about it shortly.",
 	"paymentAndPostalRegistrationDisabled": "Both the payment process and the postal registration are still disabled. You will recieve information about it shortly.",
-	"country": "Country"
+	"country": "Country",
+	"general": "General",
+	"communication": "Communication",
+	"conferenceStatusParticipantRegistration": "Registration Phase",
+	"conferenceStatusPreparation": "Preparation Phase",
+	"conferenceStatusDescription": "<p>The conference status determines what participants can see and do in the app.It should only ever be changed \"forward\". Even though no data is lost whentaking a step back, it can lead to confusion among participants andpotentially cause unexpected behavior in the app.</p><p>The conference status is oriented around the phases of a conference. Thepossibilities are:</p><ul><li><strong>Before registration starts</strong>: The conference has been created,but the registration phase has not yet started. All preparations can bemade, but registration is not yet possible, and the conference is not yetvisible externally.</li><li><strong>Registration Phase</strong>: Registration is possible until the enddate for registration is reached. Then the registration phase isautomatically ended. Now allocation can be made and also already applied. Aslong as the conference status is still \"Registration Phase\", participantscannot yet see their assignment.</li><li><strong>Preparation Phase</strong>: When the allocation is complete and you wantto announce the results, the conference status can be set to \"Preparation Phase\".This status should remain until the beginning of the conference.Participants will be shown information about postal registration andcontribution payment and can access materials and information.</li><li><strong>Active Conference</strong>: This status should be set shortly beforethe start of the conference.</li><li><strong>After the Conference</strong>: After the conference, the status canbe set to \"After the Conference\". Before this, it should be recorded whoamong the participants was present and should receive a certificate. Withthis status, participants can download their certificates.</li></ul>"
 }
