✨ feature: Payment and Postal Registration Basic Functionality (#167)
* 🚧 wip

* 🚧 wip

* 🐞 fix: add payment transaction gql model

* 🐞 fix: correctly implement all new types and relations

* ✨ feat: PaymentTransactionTracking

* ✨ feat: finish participant side payment and postal wip

* ✨ feat: Admin setup for payment process

* ⬆️ improvement: add check to gql endpoint

* 🚧 wip

* ✨ feat: Last improvements at the checksystem

* ✨ feat: Last Puzzle Pieces

* 🐞 fix: Nit Picks

* ✨ feat: Postal Registration last touches

* 🧼 format & lint

* 🐞 fix: Small fixes

* ⬆️ improvement: Small last minute improvements

* 🧼 format & lint

---------

Co-authored-by: Tade Strehk <git@strehk.eu>
Co-authored-by: m121e <14091540+m1212e@users.noreply.github.com>

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -398,7 +398,7 @@
 	"conferenceStartRegistration": "Start of registration",
 	"conferenceStartAssignment": "Start of assignment",
 	"conferenceStatus": "Conference Status",
-	"conferenceStatusPre": "Before the conference",
+	"conferenceStatusPre": "Before registration starts",
 	"conferenceStatusActive": "Active Conference",
 	"conferenceStatusPost": "After the conference",
 	"conferenceDataSavingPrompt": "Are you sure you want to save the changes? All fields marked green will be live changed.",
@@ -429,6 +429,14 @@
 	"applicationRejected": "Application Rejected",
 	"applicationRejectedText": "We are sad to inform you, that you cannot participate at this conference. This is either because you did not complete the registration in time, there were too many applications for the conference or due to individual reasons. If you have any questions, please contact the participant care.",
 	"onlyHeadDelegateCanAssignCommittees": "Only the head delegate can assign committees.",
+	"payment": "Fee Payment",
+	"postalRegistration": "Postal Registration",
+	"personalStatusDescription": "Here you can track your registration status. This lists all formal stepts you have to prepare for the conference in order to attend. You cannot participate without this checklist complete!",
+	"takeAction": "Take Action",
+	"userAgreement": "Terms and Conditions",
+	"guardianAgreement": "Guardian Agreement",
+	"mediaAgreement": "Media Usage Agreement",
+	"paymentDescription": "You can pay the participation fee just for yourself, or transfer it collectively for your delegation or even for several delegations or individual participants.",
 	"preparation": "Preparation",
 	"preparationDescription": "To be able to take part in the debates, you need to prepare for your role, your committee and your topics. This includes writing position and working papers. You can find out what these papers look like, where to submit them, preparatory texts on the topics and more information by clicking on the button below.",
 	"goToPreparation": "Open Preparation Hub",
@@ -439,5 +447,71 @@
 	"goToConferenceInfo": "Access Information Page",
 	"preview": "Preview",
 	"nsaSeats": "Non State Actor Seats",
-	"nationSeats": "Nation Seats"
+	"nationSeats": "Nation Seats",
+	"ibanMustBe22Characters": "IBAN must be 22 characters without spaces",
+	"pleaseEnterAValidIBAN": "IBAN is not valid",
+	"pleaseEnterAValidBIC": "BIC is not valid",
+	"currencyMustBe3Characters": "Currency must be 3 Letter Acronym, e.g. 'EUR'",
+	"bankingInformation": "Banking Information",
+	"postalInformation": "Postal Information",
+	"bankName": "Bank Name",
+	"iban": "IBAN",
+	"bic": "BIC",
+	"accountHolder": "Account Holder",
+	"currency": "Currency",
+	"fee": "Fee",
+	"pleaseEnterAPositiveNumber": "Please enter a postive number",
+	"pleaseEnterAValidAmount": "Please enter a valid amount",
+	"statusLegend": "Status Legend",
+	"statusLegendDone": "Completed",
+	"statusLegendProblem": "Problem – Please contact participant care if they have not already reached out to you",
+	"statusLegendPending": "Pending – the task has not yet been completed by you or marked off by participant support",
+	"singlePayment": "Single Payment",
+	"singlePaymentBtn": "Pay for myself",
+	"singlePaymentDescription": "Here you can pay the participation fee only for yourself.",
+	"delegationPayment": "Delegation Payment",
+	"delegationPaymentBtn": "Pay for my delegation",
+	"delegationPaymentDescription": "Here you can pay the participation fee for the entire delegation.",
+	"groupPayment": "Group Payment",
+	"groupPaymentBtn": "Pay for multiple participants",
+	"groupPaymentDescription": "Here you can pay the participation fee for multiple participants. This way, the fee for delegation members, support staff, and individual participants can be paid with one transfer.",
+	"paymentMethodNotAvailable": "Payment Method Not Available",
+	"referenceMaker": "Transaction Helper",
+	"referenceMakerDescription": "If you are making a transfer for yourself or several people to pay the contribution, you must first generate a reference here so that we can assign the transfer. Click on the button below to create a reference and then receive the transfer details.",
+	"youPayForXParticipants": "You are about to pay for {numParticipants} participant(s):",
+	"generateReference": "Generate Transaction Reference",
+	"reference": "Reference",
+	"copy": "Copy to Clipboard",
+	"referenceMakerGeneratedDescription": "You can now go ahaed and use the information below to make the payment. Please make sure you copy all information below exactly. If you can, use the girocode (QR-Code) on the right or copy & paste all of the information to avoid spelling mistakes.",
+	"abroadTransactionWarning": "If you are making transfers from abroad: Please pay particular attention to ensuring that all information is correct. Also make sure that you are covering the costs of the international transfer yourself and that the fee is not deducted from the amount we receive. Please also make sure that you use the correct currency ({currency}). If you are not making a SWIFT transfer, please contact Participant Support first.",
+	"abroadTransaction": "Transactions from Abroad",
+	"giroCode": "GiroCode",
+	"giroCodeDescription": "Scan the GiroCode with your banking app to pay quickly and easily (might only work from EU Countries with SEPA Transactions).",
+	"reason": "Reason",
+	"amount": "Amount",
+	"transactionDetails": "Transaction Details",
+	"groupPaymentNotYetImplemented": "Unfortunately, the payment process for groups is not yet complete. For group payments, please contact the participant support team directly, who will manually create a reference for the intended purpose. Please let the participant support team know which participants you would like to pay the fee for.",
+	"postalRegistrationNotYetImplemented": "There is no option to generate PDFs individually for postal registration yet. The participant support team has sent out information by email about how postal registration will work this year. If you have any questions, please contact the participant support team.",
+	"paymentAdminDescription": "Here the accountant can search for transaction references and change the payment status of participants",
+	"referenceSearch": "Reference Search",
+	"waitingForYourInput": "Waitung for your input...",
+	"noPaymentFound": "No transaction with this reference found",
+	"paymentRecieved": "The payment was already marked as recieved with transaction on {date}!",
+	"referencedUsers": "Referenced Users",
+	"markAsProblem": "Mark as Problem",
+	"markAsRecieved": "Mark as Recieved",
+	"attendance": "Attendance",
+	"enterDateOfdateReceipt": "Enter Date of Receipt",
+	"recievedDate": "Revieved at",
+	"paymentOpen": "Allow Payments",
+	"postalOpen": "Allow Postal Registration",
+	"postalRegistrationDisabled": "The postal registration is still disabled. You have will recieve information about it shortly.",
+	"paymentDisabled": "The payment process is still disabled. You have will recieve information about it shortly.",
+	"paymentAndPostalRegistrationDisabled": "Both the payment process and the postal registration are still disabled. You will recieve information about it shortly.",
+	"country": "Country",
+	"general": "General",
+	"communication": "Communication",
+	"conferenceStatusParticipantRegistration": "Registration Phase",
+	"conferenceStatusPreparation": "Preparation Phase",
+	"conferenceStatusDescription": "<p>The conference status determines what participants can see and do in the app.It should only ever be changed \"forward\". Even though no data is lost whentaking a step back, it can lead to confusion among participants andpotentially cause unexpected behavior in the app.</p><p>The conference status is oriented around the phases of a conference. Thepossibilities are:</p><ul><li><strong>Before registration starts</strong>: The conference has been created,but the registration phase has not yet started. All preparations can bemade, but registration is not yet possible, and the conference is not yetvisible externally.</li><li><strong>Registration Phase</strong>: Registration is possible until the enddate for registration is reached. Then the registration phase isautomatically ended. Now allocation can be made and also already applied. Aslong as the conference status is still \"Registration Phase\", participantscannot yet see their assignment.</li><li><strong>Preparation Phase</strong>: When the allocation is complete and you wantto announce the results, the conference status can be set to \"Preparation Phase\".This status should remain until the beginning of the conference.Participants will be shown information about postal registration andcontribution payment and can access materials and information.</li><li><strong>Active Conference</strong>: This status should be set shortly beforethe start of the conference.</li><li><strong>After the Conference</strong>: After the conference, the status canbe set to \"After the Conference\". Before this, it should be recorded whoamong the participants was present and should receive a certificate. Withthis status, participants can download their certificates.</li></ul>"
 }
