🐞 fix: Update pronouns field and improve German and English translations

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -475,7 +475,7 @@
 	"currentTasks": "Aktuelle Aufgaben",
 	"committeeAssignment": "Gremienzuteilung",
 	"committeeAssignmentAlertDescription": "Als Delegationsleitung musst du zeitnah die Gremienverteilung vornehmen. Dabei wird entschieden, wer von euch euren Staat in welchem Gremium vertreten wird. Sprich dich dafür bitte mit deinen Mitdelegierten ab und trefft gemeinsam eine Entscheidung, die du dann eintragen kannst.<br>Die Zuteilung kann später nicht geändert werden!",
-	"committeeAssignmentAlertDescriptionNonHeadDelegate": "Dein*e Delegationsleiter*in muss zeitnah die Gremienverteilung vor. Dabei wird entschieden, wer von euch euren Staat in welchem Gremium vertreten wird. Sprecht euch dafür bitte ab und trefft gemeinsam eine Entscheidung, die eure Delegationsleitung dann eintragen kann.",
+	"committeeAssignmentAlertDescriptionNonHeadDelegate": "Dein*e Delegationsleiter*in muss zeitnah die Gremienverteilung vornehmen. Dabei wird entschieden, wer von euch euren Staat in welchem Gremium vertreten wird. Sprecht euch dafür bitte ab und trefft gemeinsam eine Entscheidung, die eure Delegationsleitung dann eintragen kann.",
 	"assignCommittees": "Gremien jetzt zuteilen",
 	"theFollowingCommitteesAreAssignable": "Die folgenden Gremien können verteilt werden",
 	"seat": "Platz",
@@ -491,9 +491,9 @@
 	"postalRegistration": "Postalische Anmeldung",
 	"personalStatusDescription": "Hier kannst du deinen persönlichen Status verflogen. Dieser umfasst alle formellen Schritte, die du erledigen musst. Du kannst an der Konferenz nicht teilnehmen, wenn du nicht alle Aufgaben von dieser Liste erledigt hast!",
 	"takeAction": "Jetzt Erledigen",
-	"userAgreement": "AGB",
-	"guardianAgreement": "Einwilligung der Erziehungsberechtigten",
-	"mediaAgreement": "Vereinbarung über Mediennutzung",
+	"userAgreement": "Verbindliche Anmeldung",
+	"guardianAgreement": "Einwilligung Erziehungsberechtigten",
+	"mediaAgreement": "Einwilligung Bildnutzung",
 	"paymentDescription": "Du kannst den Teilnahmebeitrag nur für dich, gesammelt für deine Delegation oder sogar für delegationsübergreifend für beliebig viele Teilnehmende bezahlen. Betreuende können den Beitrag für mehrere Delegationen auf einmal entrichten.",
 	"preparation": "Inhaltliche Vorbereitung",
 	"preparationDescription": "Um an den Debatten teilnehmen zu können, musst du dich auf deine Rolle, dein Gremium und deine Themen vorbereiten. Dazu gehört, dass du Positions- und Arbeitspapiere schreibst. Wie diese Papiere aussehen, wo sie einzureichen sind sowie Vorbereitungstexte zu den Themen und weitere Informationen erfährst du, wenn du auf den folgenden Button klickst.",
