--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -433,8 +433,8 @@
 	"postalRegistration": "Postal Registration",
 	"personalStatusDescription": "Here you can track your registration status. This lists all formal stepts you have to prepare for the conference in order to attend. You cannot participate without this checklist complete!",
 	"takeAction": "Take Action",
-	"userAgreement": "Terms and Conditions",
-	"guardianAgreement": "Guardian Agreement",
+	"userAgreement": "Binding Registration",
+	"guardianAgreement": "Parental Agreement",
 	"mediaAgreement": "Media Usage Agreement",
 	"paymentDescription": "You can pay the participation fee just for yourself, or transfer it collectively for your delegation or even for several delegations or individual participants.",
 	"preparation": "Preparation",
