✨ feature: Cleanup features (#174)
* 🚧 wip

* ✨ feat: Cleanup Features

* 🧼 format & lint

---------

Co-authored-by: Tade Strehk <git@strehk.eu>

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -570,6 +570,25 @@
 	"general": "Allgemeines",
 	"communication": "Kommunikation",
 	"conferenceStatusDescription": "<p>Der Konferenzstatus bestimmt, was die Teilnehmenden in der App sehen und tun können. Er sollte immer nur \"vorwärts\" geändert werden. Auch wenn bei einem Rückschritt keine Daten verloren gehen, kann es doch einerseits zu Verwirrungen bei den Teilnehmenden führen und andererseits in der App zu unerwartetem Verhalten führen.</p><p>Der Konferenzstatus orientiert sich an den Phasen einer Konferenz. Die Möglichkeiten sind:</p><ul><li><strong>Vor Anmeldestart</strong>: Die Konferenz wurde angelegt,die Anmeldephase aber noch nicht gestartet. Es können alle Vorbereitungen getroffen werden, die Anmeldung ist aber noch nicht möglich und die Konferenz nach außen hin auch noch nicht sichtbar.</li><li><strong>Anmeldephase</strong>: Die Anmeldung ist möglich, bis das Datum für das Ende der Anmeldung erreicht ist. Dann wird die Anmeldephase automatisch beendet. Nun kann die Zuteilung vorgenommen und auch schon angewendet werden. Solange der Konferenzstatus noch \"Anmeldephase\"ist,können die Teilnehmenden ihre Zuweisung noch nicht sehen.</li><li><strong>Vorbereitung</strong>: Wenn die Zuteilung abgeschlossen istundmandie Ergebnisse bekannt geben möchte, kann der Konferenz status auf \"Vorbereitung\" gesetzt werden. Dieser Status sollte bis zu Beginnder Konferenz bestehen bleiben. Die Teilnehmenden bekommen Informationen zur postalischen Anmeldung und der Beitragszahlung angezeigt und können auf Materialien und Infos (weiter unten) zugreifen.</li><li><strong>Aktive Konferenz</strong>: Dieser Status sollte kurz vor Beginnder Konferenz gesetzt werden.</li><li><strong>Nach der Konferenz</strong>: Nach der Konferenz kann der Status auf \"Nach der Konferenz\" gesetzt werden. Vorher sollte eingetragen werden, wer von den Teilnehmenden anwesend war und ein Zertifikat erhalten soll. Mit diesem Status können die Teilnehmenden ihre Zertifikate herunterladen.</li></ul>",
+	"cleanup": "Aufräumen",
+	"cleanupDescription": "Auf dieser Seite kannst du Karteileichen aus den Datenbanken löschen, um einen besseren Überblick über die tatsächlichen Anmeldeverhältnisse zu bekommen.",
+	"cleanupDelegationMembers": "Delegationsmitglieder aufräumen",
+	"cleanupDelegationMembersDescription": "Mit einem Klick auf den unteren Button werden alle Delegationsmitglieder, deren Delegationen keine zugewiesenen Rollen haben, aus der Delegation entfernt.",
+	"cleanupDelegationMembersButton": "Delegationsmitglieder aufräumen",
+	"cleanupDelegationMembersSuccess": "Delegationsmitglieder wurden erfolgreich aufgeräumt.",
+	"cleanupIndividualParticipants": "Einzelteilnehmende aufräumen",
+	"cleanupIndividualParticipantsDescription": "Mit einem Klick auf den unteren Button werden alle Einzelteilnehmende, die keine zugewiesenen Rollen haben, aus der Konferenz entfernt.",
+	"cleanupIndividualParticipantsButton": "Einzelteilnehmende aufräumen",
+	"cleanupIndividualParticipantsSuccess": "Einzelteilnehmende wurden erfolgreich aufgeräumt.",
+	"cleanupDelegations": "Delegationen aufräumen",
+	"cleanupDelegationsDescription": "Mit einem Klick auf den unteren Button werden alle Delegationen, die keine Mitglieder haben, gelöscht und damit aus der Konferenz entfernt.",
+	"cleanupDelegationsButton": "Delegationen aufräumen",
+	"cleanupDelegationsSuccess": "Delegationen wurden erfolgreich aufgeräumt.",
+	"cleanupSupervisors": "Betreuende aufräumen",
+	"cleanupSupervisorsDescription": "Mit einem Klick auf den unteren Button werden alle Betreuende, die nicht mindestens eine Delegation mit einer zugewiesenen Rolle betreuen, aus der Konferenz entfernt.",
+	"cleanupSupervisorsButton": "Betreuende aufräumen",
+	"cleanupSupervisorsSuccess": "Betreuende wurden erfolgreich aufgeräumt.",
+	"deleted": "Gelöscht",
 	"downloadCommitteeData": "Daten für das Gremium \"{committee}\" herunterladen",
 	"alpha3Code": "ISO Alpha 3 Code"
 }
