--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -514,6 +514,25 @@
 	"conferenceStatusParticipantRegistration": "Registration Phase",
 	"conferenceStatusPreparation": "Preparation Phase",
 	"conferenceStatusDescription": "<p>The conference status determines what participants can see and do in the app.It should only ever be changed \"forward\". Even though no data is lost whentaking a step back, it can lead to confusion among participants andpotentially cause unexpected behavior in the app.</p><p>The conference status is oriented around the phases of a conference. Thepossibilities are:</p><ul><li><strong>Before registration starts</strong>: The conference has been created,but the registration phase has not yet started. All preparations can bemade, but registration is not yet possible, and the conference is not yetvisible externally.</li><li><strong>Registration Phase</strong>: Registration is possible until the enddate for registration is reached. Then the registration phase isautomatically ended. Now allocation can be made and also already applied. Aslong as the conference status is still \"Registration Phase\", participantscannot yet see their assignment.</li><li><strong>Preparation Phase</strong>: When the allocation is complete and you wantto announce the results, the conference status can be set to \"Preparation Phase\".This status should remain until the beginning of the conference.Participants will be shown information about postal registration andcontribution payment and can access materials and information.</li><li><strong>Active Conference</strong>: This status should be set shortly beforethe start of the conference.</li><li><strong>After the Conference</strong>: After the conference, the status canbe set to \"After the Conference\". Before this, it should be recorded whoamong the participants was present and should receive a certificate. Withthis status, participants can download their certificates.</li></ul>",
+	"cleanup": "Cleanup",
+	"cleanupDescription": "On this page you can delete inactive accounts from the databases to get a better overview of the actual registration situation.",
+	"cleanupDelegationMembers": "Clean up Delegation Members",
+	"cleanupDelegationMembersDescription": "By clicking on the button below, all delegation members whose delegations do not have assigned roles will be removed from the delegation.",
+	"cleanupDelegationMembersButton": "Clean up delegation members",
+	"cleanupDelegationMembersSuccess": "Delegation members have been cleaned up successfully.",
+	"cleanupIndividualParticipants": "Single Participants Cleanup",
+	"cleanupIndividualParticipantsDescription": "By clicking on the button below, all single participants who do not have assigned roles will be removed from the conference.",
+	"cleanupIndividualParticipantsButton": "Clean up single participants",
+	"cleanupIndividualParticipantsSuccess": "Single participants have been cleaned up successfully.",
+	"cleanupDelegations": "Clean up Delegations",
+	"cleanupDelegationsDescription": "By clicking on the button below, all delegations that have no members will be deleted and thus removed from the conference.",
+	"cleanupDelegationsButton": "Clean up delegations",
+	"cleanupDelegationsSuccess": "Delegations have been cleaned up successfully.",
+	"cleanupSupervisors": "Clean up Supervisors",
+	"cleanupSupervisorsDescription": "By clicking on the button below, all supervisors who do not supervise at least one delegation with an assigned role will be removed from the conference.",
+	"cleanupSupervisorsButton": "Clean up supervisors",
+	"cleanupSupervisorsSuccess": "Supervisors have been cleaned up successfully.",
+	"deleted": "Deleted",
 	"downloadCommitteeData": "Download committee data for the {committee}",
 	"alpha3Code": "ISO Alpha 3 Code"
 }
