✨ feat: add diet matrix to stats page

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -590,5 +590,7 @@
 	"cleanupSupervisorsSuccess": "Betreuende wurden erfolgreich aufgeräumt.",
 	"deleted": "Gelöscht",
 	"downloadCommitteeData": "Daten für das Gremium \"{committee}\" herunterladen",
-	"alpha3Code": "ISO Alpha 3 Code"
+	"alpha3Code": "ISO Alpha 3 Code",
+	"teamMember": "Teammitglied",
+	"teamMembers": "Teammitglieder"
 }
