chore: update translations with Fink 🐦

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -299,7 +299,6 @@
 	"assistantFlowRoleNSA1": "Representative of a NSA",
 	"assistantFlowRoleNSA2": "As a representative of a non-state actor (NSA), you represent an organization.",
 	"assistantFlowRoleNSA3": "You are not tied to a specific committee but can influence the committees that deal with the most important issues for your organization",
-	"assistantFlowRolePress1": "Journalist",
 	"assistantFlowRolePress2": "As a journalist for the conference press, you report on what happens in the committees.",
 	"assistantFlowRolePress3": "They write articles and commentaries and also produce television news reports that are shown on the evenings of the conference.",
 	"assistantFlowRoleOther1": "Other special role",
@@ -399,6 +398,8 @@
 	"conferenceStartAssignment": "Start of assignment",
 	"conferenceStatus": "Conference Status",
 	"conferenceStatusPre": "Before registration starts",
+	"conferenceStatusParticipantRegistration": "Registration Phase",
+	"conferenceStatusPreparation": "Preparation Phase",
 	"conferenceStatusActive": "Active Conference",
 	"conferenceStatusPost": "After the conference",
 	"conferenceDataSavingPrompt": "Are you sure you want to save the changes? All fields marked green will be live changed.",
@@ -412,7 +413,6 @@
 	"informationOnYourNSA": "Information on your NSA",
 	"youWillRepresent": "You will represent",
 	"status": "Status",
-	"committeeDoesNotBelongToConferenceError": "Error: The committee does not belong to the conference.",
 	"currentTasks": "Current Tasks",
 	"committeeAssignment": "Committee Assignment",
 	"committeeAssignmentAlertDescription": "As the head delegate, you must timely make the committee assignments. This will determine who among your delegation will represent your state in which committee. Please coordinate with your fellow delegates and make a joint decision that you can then enter.<br>The assignment cannot be changed later!",
@@ -420,12 +420,11 @@
 	"assignCommittees": "Assign Committees",
 	"theFollowingCommitteesAreAssignable": "The following committees are assignable",
 	"seat": "Seat",
+	"committeeDoesNotBelongToConferenceError": "Error: The committee does not belong to the conference.",
 	"pleaseAssignAllMembers": "Please assigne all delegation members to a committee!",
 	"failedToAssignCommittees": "Something went wrong: Failed to assign committees. Try again or contact support!",
 	"committeesSucessfullyAssigned": "Committees successfully assigned",
 	"personalStatus": "Personal Status",
-	"personalStatusUnderDevelopment": "Personal status overview still under development",
-	"personalStatusUnderDevelopmentDescription": "The personal status overview is still under development. Later, you'll find here information about the postal registration and payment of the conference fee. Please follow the instructions being sent to you by the participant care. You'll have an overview shortly.",
 	"applicationRejected": "Application Rejected",
 	"applicationRejectedText": "We are sad to inform you, that you cannot participate at this conference. This is either because you did not complete the registration in time, there were too many applications for the conference or due to individual reasons. If you have any questions, please contact the participant care.",
 	"onlyHeadDelegateCanAssignCommittees": "Only the head delegate can assign committees.",
@@ -511,8 +510,6 @@
 	"country": "Country",
 	"general": "General",
 	"communication": "Communication",
-	"conferenceStatusParticipantRegistration": "Registration Phase",
-	"conferenceStatusPreparation": "Preparation Phase",
 	"conferenceStatusDescription": "<p>The conference status determines what participants can see and do in the app.It should only ever be changed \"forward\". Even though no data is lost whentaking a step back, it can lead to confusion among participants andpotentially cause unexpected behavior in the app.</p><p>The conference status is oriented around the phases of a conference. Thepossibilities are:</p><ul><li><strong>Before registration starts</strong>: The conference has been created,but the registration phase has not yet started. All preparations can bemade, but registration is not yet possible, and the conference is not yetvisible externally.</li><li><strong>Registration Phase</strong>: Registration is possible until the enddate for registration is reached. Then the registration phase isautomatically ended. Now allocation can be made and also already applied. Aslong as the conference status is still \"Registration Phase\", participantscannot yet see their assignment.</li><li><strong>Preparation Phase</strong>: When the allocation is complete and you wantto announce the results, the conference status can be set to \"Preparation Phase\".This status should remain until the beginning of the conference.Participants will be shown information about postal registration andcontribution payment and can access materials and information.</li><li><strong>Active Conference</strong>: This status should be set shortly beforethe start of the conference.</li><li><strong>After the Conference</strong>: After the conference, the status canbe set to \"After the Conference\". Before this, it should be recorded whoamong the participants was present and should receive a certificate. Withthis status, participants can download their certificates.</li></ul>",
 	"cleanup": "Cleanup",
 	"cleanupDescription": "On this page you can delete inactive accounts from the databases to get a better overview of the actual registration situation.",
@@ -535,6 +532,8 @@
 	"deleted": "Deleted",
 	"downloadCommitteeData": "Download committee data for the {committee}",
 	"alpha3Code": "ISO Alpha 3 Code",
+	"teamMember": "Team Member",
+	"teamMembers": "Team Members",
 	"committees": "Committees",
 	"participantStatus": "Participant Status",
 	"postalDone": "postal registration completed",
@@ -542,5 +541,8 @@
 	"postalPending": "postal registration pending",
 	"paymentDone": "payment completed",
 	"paymentProblem": "payment not complete / faulty",
-	"paymentPending": "payment pending"
+	"paymentPending": "payment pending",
+	"assistantFlowRolePress1": "Journalist",
+	"personalStatusUnderDevelopment": "Personal status overview still under development",
+	"personalStatusUnderDevelopmentDescription": "The personal status overview is still under development. Later, you'll find here information about the postal registration and payment of the conference fee. Please follow the instructions being sent to you by the participant care. You'll have an overview shortly."
 }
