--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -544,5 +544,8 @@
 	"paymentPending": "payment pending",
 	"assistantFlowRolePress1": "Journalist",
 	"personalStatusUnderDevelopment": "Personal status overview still under development",
-	"personalStatusUnderDevelopmentDescription": "The personal status overview is still under development. Later, you'll find here information about the postal registration and payment of the conference fee. Please follow the instructions being sent to you by the participant care. You'll have an overview shortly."
+	"personalStatusUnderDevelopmentDescription": "The personal status overview is still under development. Later, you'll find here information about the postal registration and payment of the conference fee. Please follow the instructions being sent to you by the participant care. You'll have an overview shortly.",
+	"downloads": "Downloads",
+	"download": "Download",
+	"nonStateActors": "Non-State Actors"
 }
