✨ feature: Add delete participant functionality

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -600,5 +600,7 @@
 	"postalPending": "Postalische Anmeldung noch nicht abgeschlossen",
 	"paymentDone": "Beitragszahlung abgeschlossen",
 	"paymentProblem": "Beitragszahlung nicht vollständig / fehlerhaft",
-	"paymentPending": "Beitragszahlung noch nicht abgeschlossen"
+	"paymentPending": "Beitragszahlung noch nicht abgeschlossen",
+	"deleteParticipantConfirm": "Willst du den/die Teilnehmende*n wirklich von der Konferenz entfernen?",
+	"deleteParticipant": "Teilnehmende*n entfernen"
 }
