✨ feature: add participant management and download functionality

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -603,5 +603,7 @@
 	"paymentPending": "Beitragszahlung noch nicht abgeschlossen",
 	"downloads": "Downloads",
 	"download": "Download",
-	"nonStateActors": "Nichtstaatliche Atkeure"
+	"nonStateActors": "Nichtstaatliche Atkeure",
+	"addParticipant": "Teilnehmer*in hinzufügen",
+	"downloadParticipantData": "Daten für Gruppe \"{group}\" herunterladen"
 }
