--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -547,5 +547,7 @@
 	"personalStatusUnderDevelopmentDescription": "The personal status overview is still under development. Later, you'll find here information about the postal registration and payment of the conference fee. Please follow the instructions being sent to you by the participant care. You'll have an overview shortly.",
 	"downloads": "Downloads",
 	"download": "Download",
-	"nonStateActors": "Non-State Actors"
+	"nonStateActors": "Non-State Actors",
+	"addParticipant": "Add Participant",
+	"downloadParticipantData": "Download Data for Group \"{group}\""
 }
