⬆️ improvement: allow search for userIds and emails

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -552,5 +552,6 @@
 	"downloadParticipantData": "Download Data for Group \"{group}\"",
 	"searchForUser": "UserID or Email",
 	"details": "Details",
-	"addUser": "Add Participant"
+	"addUser": "Add Participant",
+	"userNotFound": "User not found"
 }
