✨ feature: implement UserSearchModal for participant addition and update user fetching logic

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -608,5 +608,6 @@
 	"downloadParticipantData": "Daten für Gruppe \"{group}\" herunterladen",
 	"searchForUser": "UserID oder E-Mail",
 	"details": "Details",
-	"addUser": "Teilnehmende*n hinzufügen"
+	"addUser": "Teilnehmende*n hinzufügen",
+	"emailOrId": "Email oder UserID"
 }
