✨ feature: Add delete participant functionality (#201)
* ✨ feature: Add delete participant functionality

* ✨ feature: add unregister participant mutation and update participant deletion logic

* ✨ feature: add unregister participant mutation and update participant deletion logic

* use right abilities

---------

Co-authored-by: Tade Strehk <git@strehk.eu>

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -545,6 +545,8 @@
 	"assistantFlowRolePress1": "Journalist",
 	"personalStatusUnderDevelopment": "Personal status overview still under development",
 	"personalStatusUnderDevelopmentDescription": "The personal status overview is still under development. Later, you'll find here information about the postal registration and payment of the conference fee. Please follow the instructions being sent to you by the participant care. You'll have an overview shortly.",
+	"deleteParticipantConfirm": "Do you really want to delete the conference participant?",
+	"deleteParticipant": "Remove Particiapnt",
 	"downloads": "Downloads",
 	"download": "Download",
 	"nonStateActors": "Non-State Actors"
