✨ feature: Add ability for management to add participants (#203)
* ✨ feature: add participant management and download functionality

* ✨ feature: add supervisors

* ✨ feature: add single participants

* ✨ feature: add NonStateActors

* ✨ feature: add DelegationMembers

* 🧼 format & lint

* ⬆️ improvement: allow search for userIds and emails

* ✨ feature: implement UserSearchModal for participant addition and update user fetching logic

* stronger permissions

---------

Co-authored-by: Tade Strehk <git@strehk.eu>

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -605,5 +605,11 @@
 	"deleteParticipant": "Teilnehmende*n entfernen",
 	"downloads": "Downloads",
 	"download": "Download",
-	"nonStateActors": "Nichtstaatliche Atkeure"
+	"nonStateActors": "Nichtstaatliche Atkeure",
+	"addParticipant": "Teilnehmer*in hinzufügen",
+	"downloadParticipantData": "Daten für Gruppe \"{group}\" herunterladen",
+	"searchForUser": "UserID oder E-Mail",
+	"details": "Details",
+	"addUser": "Teilnehmende*n hinzufügen",
+	"emailOrId": "Email oder UserID"
 }
