✨ feat: enhance Drawer and Modal components with new header and loading states

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -611,5 +611,7 @@
 	"searchForUser": "UserID oder E-Mail",
 	"details": "Details",
 	"addUser": "Teilnehmende*n hinzufügen",
-	"emailOrId": "Email oder UserID"
+	"emailOrId": "Email oder UserID",
+	"reset": "Zurücksetzen",
+	"done": "Fertig"
 }
