--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -613,5 +613,17 @@
 	"addUser": "Teilnehmende*n hinzufügen",
 	"emailOrId": "Email oder UserID",
 	"reset": "Zurücksetzen",
-	"done": "Fertig"
+	"done": "Fertig",
+	"survey": "Umfragen",
+	"goToSurvey": "Zu den Umfragen",
+	"surveyDescription": "In den Umfragen melden Sie sich u.a. für Wahlveranstaltungen an oder das Konferenzteam fragt andere wichtige Informationen von Ihnen ab",
+	"days": "Tag(e)",
+	"surveyClosed": "Umfrage geschlossen",
+	"yourAnswer": "Deine Antwort",
+	"noAnswerYet": "Noch nicht beantwortet",
+	"takeSurvey": "Umfrage beantworten",
+	"seatsOccupied": "von {seats} Plätzen belegt",
+	"fewSeatsLeft": "Nur wenige Plätze übrig! ({seats} von {upperLimit} belegt)",
+	"noSeatsLeft": "Ausgebucht ({seats} Plätze)",
+	"surveyOpen": "Umfrage bis {deadline} geöffnet"
 }
