✨ feat: add validation for survey option limits and deadlines

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -625,5 +625,7 @@
 	"seatsOccupied": "von {seats} Plätzen belegt",
 	"fewSeatsLeft": "Nur wenige Plätze übrig! ({seats} von {upperLimit} belegt)",
 	"noSeatsLeft": "Ausgebucht ({seats} Plätze)",
-	"surveyOpen": "Umfrage bis {deadline} geöffnet"
+	"surveyOpen": "Umfrage bis {deadline} geöffnet",
+	"optionUpperLimitReached": "Auswahl konnte nicht bestätigt werden, da die Maximalanzahl bereits erreicht wurde.",
+	"questionDeadlinePassed": "Die Umfrage ist bereits abgelaufen und kann nicht mehr ausgefüllt werden."
 }
