--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -627,5 +627,6 @@
 	"noSeatsLeft": "Ausgebucht ({seats} Plätze)",
 	"surveyOpen": "Umfrage bis {deadline} geöffnet",
 	"optionUpperLimitReached": "Auswahl konnte nicht bestätigt werden, da die Maximalanzahl bereits erreicht wurde.",
-	"questionDeadlinePassed": "Die Umfrage ist bereits abgelaufen und kann nicht mehr ausgefüllt werden."
+	"questionDeadlinePassed": "Die Umfrage ist bereits abgelaufen und kann nicht mehr ausgefüllt werden.",
+	"noUpperLimit": "Keine Begrenzung"
 }
