--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -572,5 +572,6 @@
 	"noSeatsLeft": "No seats left ({seats} Plätze)",
 	"surveyOpen": "Survey open until {deadline}",
 	"optionUpperLimitReached": "Selection could not be confirmed because the maximum number has already been reached.",
-	"questionDeadlinePassed": "The survey has already expired and can no longer be completed."
+	"questionDeadlinePassed": "The survey has already expired and can no longer be completed.",
+	"noUpperLimit": "No Upper Limit"
 }
