--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -628,5 +628,8 @@
 	"surveyOpen": "Umfrage bis {deadline} geöffnet",
 	"optionUpperLimitReached": "Auswahl konnte nicht bestätigt werden, da die Maximalanzahl bereits erreicht wurde.",
 	"questionDeadlinePassed": "Die Umfrage ist bereits abgelaufen und kann nicht mehr ausgefüllt werden.",
-	"noUpperLimit": "Keine Begrenzung"
+	"noUpperLimit": "Keine Begrenzung",
+	"paperInbox": "Link zum Einreichen von Papieren",
+	"paperInboxDescription": "Über das hinterlegte Formular kannst du Positions- und Arbeitspapiere einreichen.",
+	"paperInboxBtn": "Papier einreichen"
 }
