--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -573,5 +573,8 @@
 	"surveyOpen": "Survey open until {deadline}",
 	"optionUpperLimitReached": "Selection could not be confirmed because the maximum number has already been reached.",
 	"questionDeadlinePassed": "The survey has already expired and can no longer be completed.",
-	"noUpperLimit": "No Upper Limit"
+	"noUpperLimit": "No Upper Limit",
+	"paperInbox": "Link to Submit Papers",
+	"paperInboxDescription": "You can submit position and working papers using the form provided.",
+	"paperInboxBtn": "Submit Paper"
 }
