✨ feature: add query to retrieve all nations for a conference and implement CSV download functionality

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -631,5 +631,6 @@
 	"noUpperLimit": "Keine Begrenzung",
 	"paperInbox": "Link zum Einreichen von Papieren",
 	"paperInboxDescription": "Über das hinterlegte Formular kannst du Positions- und Arbeitspapiere einreichen.",
-	"paperInboxBtn": "Papier einreichen"
+	"paperInboxBtn": "Papier einreichen",
+	"allNations": "Liste aller Nationen der Konferenz"
 }
