--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -576,5 +576,6 @@
 	"noUpperLimit": "No Upper Limit",
 	"paperInbox": "Link to Submit Papers",
 	"paperInboxDescription": "You can submit position and working papers using the form provided.",
-	"paperInboxBtn": "Submit Paper"
+	"paperInboxBtn": "Submit Paper",
+	"allNations": "List of all Nations at the Conference"
 }
