✨ feature: add new translations and include ConferenceRegistrationList component in downloads page

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -631,5 +631,8 @@
 	"noUpperLimit": "Keine Begrenzung",
 	"paperInbox": "Link zum Einreichen von Papieren",
 	"paperInboxDescription": "Über das hinterlegte Formular kannst du Positions- und Arbeitspapiere einreichen.",
-	"paperInboxBtn": "Papier einreichen"
+	"paperInboxBtn": "Papier einreichen",
+	"ofAge": "Volljährig",
+	"termsAndConditions": "Teilnahmebedingungen",
+	"nonStateActor": "Nichtstaatlicher Akteur"
 }
