--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -576,5 +576,8 @@
 	"noUpperLimit": "No Upper Limit",
 	"paperInbox": "Link to Submit Papers",
 	"paperInboxDescription": "You can submit position and working papers using the form provided.",
-	"paperInboxBtn": "Submit Paper"
+	"paperInboxBtn": "Submit Paper",
+	"ofAge": "Of Age",
+	"termsAndConditions": "Terms & Conditions",
+	"nonStateActor": "Non-State Actor"
 }
