✨ feature: update translations for 'allNations' and fix formatting in downloads page

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -635,5 +635,6 @@
 	"allNations": "Liste aller Nationen der Konferenz",
 	"ofAge": "Volljährig",
 	"termsAndConditions": "Teilnahmebedingungen",
-	"nonStateActor": "Nichtstaatlicher Akteur"
+	"nonStateActor": "Nichtstaatlicher Akteur",
+	"allNations": "Alle Nationen"
 }
