--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -580,5 +580,6 @@
 	"allNations": "List of all Nations at the Conference",
 	"ofAge": "Of Age",
 	"termsAndConditions": "Terms & Conditions",
-	"nonStateActor": "Non-State Actor"
+	"nonStateActor": "Non-State Actor",
+	"allNations": "All Nations"
 }
