✨ feature: add query to retrieve all nations for a conference and implement CSV download functionality (#214)
* ✨ feature: add query to retrieve all nations for a conference and implement CSV download functionality

* ✨ feature: update translations for 'allNations' and fix formatting in downloads page

* 🔧 chore: update 'world-countries' package to version 5.1.0

---------

Co-authored-by: Tade Strehk <git@strehk.eu>

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -632,7 +632,9 @@
 	"paperInbox": "Link zum Einreichen von Papieren",
 	"paperInboxDescription": "Über das hinterlegte Formular kannst du Positions- und Arbeitspapiere einreichen.",
 	"paperInboxBtn": "Papier einreichen",
+	"allNations": "Liste aller Nationen der Konferenz",
 	"ofAge": "Volljährig",
 	"termsAndConditions": "Teilnahmebedingungen",
-	"nonStateActor": "Nichtstaatlicher Akteur"
+	"nonStateActor": "Nichtstaatlicher Akteur",
+	"allNations": "Alle Nationen"
 }
